--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -4,60 +4,137 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Inscripciones</title>
-    <link
-      rel="shortcut icon"
-      href="../img/ico/IACan-Favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="../img/ico/IACan-Favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div class="contenedor">
-      <header>
-        <div class="logo">
-          <img src="../img/IACan Logo.png" alt="Logo" class="logo-style" />
-        </div>
-        <div class="menu-gral">
-          <h1>Instituto de Adiestramiento Canino</h1>
-          <nav class="menu">
-            <ul>
-              <li><a href="../index.html" target="_self">Inicio</a></li>
-              <li><a href="#">Inscribite</a></li>
-              <li><a href="adiestradores.html" target="_self">Adiestradores</a></li>
-              <li><a href="contacto.html" target="_blank">Contacto</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
-    </div>
-      <main>
+    <header>
+      <div class="contenedor">
+        <img src="../img/IACan Logo.png" alt="Logo" class="logo-style" />
+        <h1>Instituto de Adiestramiento Canino</h1>
+        <a href="ingresar"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="../index.html" target="_self">Inicio</a></li>
+          <li><a href="#">Inscribite</a></li>
+          <li><a href="adiestradores.html" target="_self">Adiestradores</a></li>
+          <li><a href="contacto.html" target="_blank">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section>
         <div class="texto">
-            <p>
+          <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum
             ipsa odio deleniti quos maxime sapiente beatae hic. Omnis blanditiis
             quasi exercitationem repudiandae error veritatis tempore eum? Harum,
             sapiente accusamus.
-            </p>
+          </p>
         </div>
         <div class="video">
-            <video src="../videos/pexels-koolshooters-7682708 (2160p).mp4" alt="video1" width="700px" autoplay>
+          <video src="../videos/presentacion.mp4" alt="video1" width="700px" autoplay>
         </div>
-        <div class="texto">
-            <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio harum 
-            blanditiis libero voluptatem commodi repellat quia labore assumenda 
-            veniam, voluptas quisquam doloribus ducimus cumque ab et id error, 
-            adipisci maiores.
-            </p>
-        </div>
+      </section>
+      <section>
+        <h2>Nuestros Entrenadores</h2>
+        <div class="box">
+          <div class="card_box">
+            <div class="card">    
+              <div class="frente">
+                <img src="../img/entrenador1.jpg">
+              </div>
+              <div class="dorso">
+                <h4>Gastón Mencia:</h4>
+                <p>
+                  Médico veterinario experto en comportamiento canino y adiestramiento de canes de compañía. Más de 10 años de 
+                  experiencia entrenando perros guías y acompañantes terapéuticos.
+                </p>
+              </div>
+            </div>      
+          </div>
+          <div class="card_box">
+            <div class="card">    
+              <div class="frente">
+                <img src="../img/entrenador2.jpg">
+              </div>
+              <div class="dorso">
+                <h4>César Morales:</h4>
+                <p>
+                  Experto en método de adiestramiento canino cognitivo-emocional. Entrenador de canes de la policía por más
+                  de 12 años.
+                </p>
+              </div>    
+            </div>
+          </div>
+          <div class="card_box">
+            <div class="card">    
+              <div class="frente">
+                <img src="../img/entrenadora3.jpg">
+              </div>
+              <div class="dorso">
+                <h4>Mía Iida:</h4>
+                <p>
+                  Médica veterinaria experta en adiestramiento de canes para búsqueda y rescate en condiciones climáticas
+                  adversas. Más de 15 años de experiencia en reconocidas instituciones europeas.
+                </p>
+              </div>    
+            </div>
+          </div>  
+          <div class="card_box">
+            <div class="card">    
+              <div class="frente">
+                <img src="../img/entrenadora4.jpg">
+              </div>
+              <div class="dorso">
+                <h4>Pilar Estévez:</h4>
+                <p>
+                  Psicóloga canina y médica veterinaria. Especialista en entrenamiento de canes para rescate de rehenes y 
+                  personas en lugares inhóspitos.
+                </p>
+              </div>    
+            </div>
+          </div>
+          <div class="card_box">
+            <div class="card">    
+              <div class="frente">
+                <img src="../img/entrenador5.jpg">
+              </div>
+              <div class="dorso">
+                <h4>Tiago Fernández:</h4>
+                <p>
+                  Experto en adiestramiento canino cognitivo-emocional. Más de 10 años de experiencia entrenando canes para 
+                  la policía federal.
+                </p>
+              </div>    
+            </div>
+          </div>
+          <div class="card_box">
+            <div class="card">    
+              <div class="frente">
+                <img src="../img/entrenadora6.jpg">
+              </div>
+              <div class="dorso">
+                <h4>Monique Da Silva:</h4>
+                <p>
+                  Médica veterinaria y psicóloga canina. Experta en adiestramiento de canes de compañía terapéutica.
+                </p>
+              </div>    
+            </div>
+          </div>
+        </div> 
+      </section>
+      <section>
         <div class="grupo">
-            <div class="boton">
-                <a href="form-inscripcion.html">Inscribite</a>
-            </div>
-            <div class="boton">
-                <a href="../archivos/adiestramiento_canino.pdf" download>Plan de Estudios</a>
-            </div>
-        </div>    
+          <div class="boton">
+            <a href="form-inscripcion.html">Inscribite</a>
+          </div>
+          <div class="boton">
+            <a href="../archivos/adiestramiento_canino.pdf" download>Plan de Estudios</a>
+          </div>
+        </div>
+      </section>        
     </main>
     <footer>
       <div class="datos">
@@ -66,11 +143,12 @@
         <p>mapa google</p>
       </div>
       <div class="links">
-        <a href="../archivos/adiestramiento_canino.pdf" download>Plan de Estudios</a>
+        <a href="../adiestramiento_canino.pdf" download>Plan de Estudios</a>
         <a href="adiestradores.html">Adiestradores</a>
         <a href="contacto.html" target="_blank">Contacto</a>
       </div>
       <div class="redes">
+        <h4>Nuestras Redes Sociales</h4>
         <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
         <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
         <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
