--- a/index.html
+++ b/index.html
@@ -6,48 +6,102 @@
     <title>IACan</title>
     <link rel="shortcut icon" href="img/ico/IACan-Favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
-    <div class="contenedor">
-      <header>
-        <div class="logo">
-          <img src="img/IACan Logo.png" alt="Logo" class="logo-style" />
-        </div>
-        <div class="menu-gral">
-          <h1>Instituto de Adiestramiento Canino</h1>
-          <nav class="menu">
-            <ul>
-              <li><a href="#">Inicio</a></li>
-              <li><a href="pages/inscripciones.html" target="_self">Inscribite</a></li>
-              <li><a href="pages/adiestradores.html" target="_self">Adiestradores</a></li>
-              <li><a href="pages/contacto.html" target="_blank">Contacto</a></li>
-            </ul>
-          </nav>
-        </div>
-        <div>
-          <a href="ingresar"><img src="img/inicio.png" alt="inicio" id="inicio"/></a>
-        </div>
-      </header>
-    </div>
+    <header>
+      <div class="contenedor">
+        <img src="img/IACan Logo.png" alt="Logo" class="logo-style" />
+        <h1>Instituto de Adiestramiento Canino</h1>
+        <a href="ingresar"><img src="img/inicio.png" alt="inicio" id="inicio"/></a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="pages/inscripciones.html" target="_self">Inscribite</a></li>
+          <li><a href="pages/adiestradores.html" target="_self">Adiestradores</a></li>
+          <li><a href="pages/contacto.html" target="_blank">Contacto</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
+      <h2>Bienvenido a IACan</h2>
+      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interval="2000">
+            <img src="./img/fot1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./img/Foto2.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./img/Foto3.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./img/fot2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./img/fot3.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./img/fot4.jpg" class="d-block w-100" alt="...">
+          </div>  
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./img/fot6.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-bs-interval="2000">
+            <img src="./img/fot9.jpg" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <h3>Quiénes somos</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dicta
-        laborum at explicabo fugiat minus neque aliquid nihil corrupti sed
-        reprehenderit incidunt, eveniet provident autem quam voluptatem
-        aspernatur temporibus doloremque.
+        En 2015 un pequeño grupo de entrenadores considerábamos que era necesario cambiar la forma tradicional de entrenar y 
+        empezamos a compartir nuestras inquietudes, trabajando juntos para encontrar alternativas que respondieran a las 
+        necesidades que implicaba la integración saludable y feliz de los perros en el núcleo familiar.
+      </p>
+      <p>  
+        El resultado fue la puesta en marcha en 2016 de la que hoy es una de las empresas de adiestramiento con más calidad 
+        técnica del Latinoamérica y Argentina, IACan, llegando incluso a competir con escuelas de adiestramiento europeas.
       </p>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ipsam
-        neque labore eveniet temporibus unde nihil laborum, nostrum soluta? Ea
-        saepe nesciunt repellendus harum incidunt ab nisi sapiente reprehenderit
-        illo.
+        Nuestro equipo es pionero a nivel latinoamericano en el desarrollo y aplicación del trabajo cognitivo-emocional, y nos 
+        enorgullece haber introducido el perro de asistencia a personas con discapacidad en nuestro país, siendo la primera 
+        empresa de adiestramiento en Argentina que ha entregado perros de ayuda a múltiples colectivos.
+      </p>
+      <h3>Nuestra visión</h3>
+      <p>
+        Los perros forman parte de nuestra vida y nos dan un regalo especial: su cariño y lealtad. Nos quieren de forma 
+        incondicional e incansable y enriquecen nuestra vida con su compañía, apoyo y amistad. No podemos fallarles, debemos 
+        asegurarnos de que tengan una vida tan plena con nosotros, como la nuestra se vuelve con ellos.
       </p>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci
-        doloribus quae tempora nesciunt quidem animi ex eligendi a inventore eum
-        reprehenderit, quis veritatis aut magni in quas deleniti! Accusantium,
-        voluptatum?
+        Somos afortunados, ya que nos dedicamos a aquello que más nos gusta, nuestros amigos peludos, y queremos compartir con 
+        vos nuestra experiencia y conocimiento.
       </p>
+      <p>
+        Desde IACan te ofrecemos la mejor formación si deseas prepararte como profesional del adiestramiento y la educación canina, 
+        ya que estamos dedicados a estudiar y enseñar cómo organizar la convivencia entre perros y personas, a fin de que podamos 
+        comprendernos, comunicarnos y ser felices juntos.
+      </p>
+      <h3>Con nuestra ayuda vas a:</h3>
+      <ul>
+        <li>Aprender los métodos, manejo y conocimientos nuevos en el adiestramiento, con una visión a mejorar la comunicación 
+          y la convivencia con el can.</li>
+        <li>Poder inducir a un comportamiento adecuado a través del método cognitivo-emocional.</li>
+        <li>Saber equilibrar el respeto al canido con la necesidad del cliente, optimizando el proceso de adiestramiento.</li>
+        <li>Conocer el mecanismo de aprendizaje de los caninos, las técnicas básicas del adiestramiento y del diseño de sistemas 
+          de seguridad, cuáles son las acciones necesarias para que el can responda a los estímulos y la valorización del juego 
+          como herramienta de enseñanza.</li>
+      </ul>
     </main>
     <footer>
       <div class="datos">
@@ -61,11 +115,13 @@
         <a href="contacto.html" target="_blank">Contacto</a>
       </div>
       <div class="redes">
+        <h4>Nuestras Redes Sociales</h4>
         <a href="#"><img src="img/whatsapp.png" alt="whatsapp"></a>
         <a href="#"><img src="img/facebook.png" alt="facebook"></a>
         <a href="#"><img src="img/instagram.png" alt="instagram"></a>
         <a href="#"><img src="img/twitter.png" alt="twitter"></a>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
