--- a/pages/adiestradores.html
+++ b/pages/adiestradores.html
@@ -8,44 +8,42 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
+  <header>
     <div class="contenedor">
-        <header>
-          <div class="logo">
-            <img src="../img/IACan Logo.png" alt="Logo" class="logo-style" />
-          </div>
-          <div class="menu-gral">
-            <h1>Instituto de Adiestramiento Canino</h1>
-            <nav class="menu">
-                <ul>
-                    <li><a href="../index.html" target="_self">Inicio</a></li>
-                    <li><a href="inscripciones.html" target="_self">Inscribite</a></li>
-                    <li><a href="#">Adiestradores</a></li>
-                    <li><a href="contacto.html" target="_blank">Contacto</a></li>
-                </ul>
-            </nav>
-           </div>
-        </header>
+      <img src="../img/IACan Logo.png" alt="Logo" class="logo-style" />
+      <h1>Instituto de Adiestramiento Canino</h1>
+      <a href="ingresar"><img src="../img/inicio.png" alt="inicio" id="inicio"/></a>
     </div>
-    <main>
-
-    </main>
-    <footer>
-        <div class="datos">
-          <p>dirección</p>
-          <p>barrio</p>
-          <p>mapa google</p>
-        </div>
-        <div class="links">
-          <a href="../archivos/adiestramiento_canino.pdf" download>Plan de Estudios</a>
-          <a href="#">Adiestradores</a>
-          <a href="contacto.html" target="_blank">Contacto</a>
-        </div>
-        <div class="redes">
-          <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
-          <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
-          <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
-          <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
-        </div>
-    </footer>
+    <nav>
+      <ul>
+        <li><a href="../index.html" target="_self">Inicio</a></li>
+        <li><a href="inscripciones.html" target="_self">Inscribite</a></li>
+        <li><a href="#">Adiestradores</a></li>
+        <li><a href="contacto.html" target="_blank">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+  
+  </main>
+  <footer>
+    <div class="datos">
+      <p>dirección</p>
+      <p>barrio</p>
+      <p>mapa google</p>
+    </div>
+    <div class="links">
+      <a href="../adiestramiento_canino.pdf" download>Plan de Estudios</a>
+      <a href="adiestradores.html">Adiestradores</a>
+      <a href="contacto.html" target="_blank">Contacto</a>
+    </div>
+    <div class="redes">
+      <h4>Nuestras Redes Sociales</h4>
+      <a href="#"><img src="../img/whatsapp.png" alt="whatsapp"></a>
+      <a href="#"><img src="../img/facebook.png" alt="facebook"></a>
+      <a href="#"><img src="../img/instagram.png" alt="instagram"></a>
+      <a href="#"><img src="../img/twitter.png" alt="twitter"></a>
+    </div>
+  </footer>
 </body>
 </html>
