--- a/index.html
+++ b/index.html
@@ -62,46 +62,127 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-      <h3>Quiénes somos</h3>
-      <p>
-        En 2015 un pequeño grupo de entrenadores considerábamos que era necesario cambiar la forma tradicional de entrenar y 
-        empezamos a compartir nuestras inquietudes, trabajando juntos para encontrar alternativas que respondieran a las 
-        necesidades que implicaba la integración saludable y feliz de los perros en el núcleo familiar.
-      </p>
-      <p>  
-        El resultado fue la puesta en marcha en 2016 de la que hoy es una de las empresas de adiestramiento con más calidad 
-        técnica del Latinoamérica y Argentina, IACan, llegando incluso a competir con escuelas de adiestramiento europeas.
-      </p>
-      <p>
-        Nuestro equipo es pionero a nivel latinoamericano en el desarrollo y aplicación del trabajo cognitivo-emocional, y nos 
-        enorgullece haber introducido el perro de asistencia a personas con discapacidad en nuestro país, siendo la primera 
-        empresa de adiestramiento en Argentina que ha entregado perros de ayuda a múltiples colectivos.
-      </p>
-      <h3>Nuestra visión</h3>
-      <p>
-        Los perros forman parte de nuestra vida y nos dan un regalo especial: su cariño y lealtad. Nos quieren de forma 
-        incondicional e incansable y enriquecen nuestra vida con su compañía, apoyo y amistad. No podemos fallarles, debemos 
-        asegurarnos de que tengan una vida tan plena con nosotros, como la nuestra se vuelve con ellos.
-      </p>
-      <p>
-        Somos afortunados, ya que nos dedicamos a aquello que más nos gusta, nuestros amigos peludos, y queremos compartir con 
-        vos nuestra experiencia y conocimiento.
-      </p>
-      <p>
-        Desde IACan te ofrecemos la mejor formación si deseas prepararte como profesional del adiestramiento y la educación canina, 
-        ya que estamos dedicados a estudiar y enseñar cómo organizar la convivencia entre perros y personas, a fin de que podamos 
-        comprendernos, comunicarnos y ser felices juntos.
-      </p>
-      <h3>Con nuestra ayuda vas a:</h3>
-      <ul>
-        <li>Aprender los métodos, manejo y conocimientos nuevos en el adiestramiento, con una visión a mejorar la comunicación 
-          y la convivencia con el can.</li>
-        <li>Poder inducir a un comportamiento adecuado a través del método cognitivo-emocional.</li>
-        <li>Saber equilibrar el respeto al canido con la necesidad del cliente, optimizando el proceso de adiestramiento.</li>
-        <li>Conocer el mecanismo de aprendizaje de los caninos, las técnicas básicas del adiestramiento y del diseño de sistemas 
-          de seguridad, cuáles son las acciones necesarias para que el can responda a los estímulos y la valorización del juego 
-          como herramienta de enseñanza.</li>
-      </ul>
+      <div class="centro">
+        <div class="info">
+          <h3>Quiénes somos</h3>
+          <p>
+            En 2015 un pequeño grupo de entrenadores considerábamos que era necesario cambiar la forma tradicional de entrenar y 
+            empezamos a compartir nuestras inquietudes, trabajando juntos para encontrar alternativas que respondieran a las 
+            necesidades que implicaba la integración saludable y feliz de los perros en el núcleo familiar.
+          </p>
+          <p>  
+            El resultado fue la puesta en marcha en 2016 de la que hoy es una de las empresas de adiestramiento con más calidad 
+            técnica del Latinoamérica y Argentina, IACan, llegando incluso a competir con escuelas de adiestramiento europeas.
+          </p>
+          <p>
+            Nuestro equipo es pionero a nivel latinoamericano en el desarrollo y aplicación del trabajo cognitivo-emocional, y nos 
+            enorgullece haber introducido el perro de asistencia a personas con discapacidad en nuestro país, siendo la primera 
+            empresa de adiestramiento en Argentina que ha entregado perros de ayuda a múltiples colectivos.
+          </p>
+          <h3>Nuestra visión</h3>
+          <p>
+            Los perros forman parte de nuestra vida y nos dan un regalo especial: su cariño y lealtad. Nos quieren de forma 
+            incondicional e incansable y enriquecen nuestra vida con su compañía, apoyo y amistad. No podemos fallarles, debemos 
+            asegurarnos de que tengan una vida tan plena con nosotros, como la nuestra se vuelve con ellos.
+          </p>
+          <p>
+            Somos afortunados, ya que nos dedicamos a aquello que más nos gusta, nuestros amigos peludos, y queremos compartir con 
+            vos nuestra experiencia y conocimiento.
+          </p>
+          <p>
+            Desde IACan te ofrecemos la mejor formación si deseas prepararte como profesional del adiestramiento y la educación canina, 
+            ya que estamos dedicados a estudiar y enseñar cómo organizar la convivencia entre perros y personas, a fin de que podamos 
+            comprendernos, comunicarnos y ser felices juntos.
+          </p>
+          <h3>Con nuestra ayuda vas a:</h3>
+          <ul>
+            <li>Aprender los métodos, manejo y conocimientos nuevos en el adiestramiento, con una visión a mejorar la comunicación 
+              y la convivencia con el can.</li>
+            <li>Poder inducir a un comportamiento adecuado a través del método cognitivo-emocional.</li>
+            <li>Saber equilibrar el respeto al canido con la necesidad del cliente, optimizando el proceso de adiestramiento.</li>
+            <li>Conocer el mecanismo de aprendizaje de los caninos, las técnicas básicas del adiestramiento y del diseño de sistemas 
+              de seguridad, cuáles son las acciones necesarias para que el can responda a los estímulos y la valorización del juego 
+              como herramienta de enseñanza.</li>
+          </ul>
+        </div>
+        <div class="aside">
+          <h4>Calendario de Eventos</h4>
+          <iframe src="https://calendar.google.com/calendar/embed?height=299&wkst=1&bgcolor=%23E67C73&ctz=America%2FArgentina%2FBuenos_Aires&showTitle=0&showPrint=0&showTabs=0&showTz=0&showCalendars=0&src=NWUyODk5MTg5NDNkMjVhNzdjMzYxMTgxMzAzMzRlMDExNDU2MDM2ODI1NWQyNjkxYmQ0NzE1MzI3MTgxY2EwZUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23AD1457" style="border:solid 1px #777" width="430" height="299" frameborder="0" scrolling="no"></iframe>
+          <ul class="eventos">
+            <li>
+              <p>
+                <b>14/10</b> - Encuentro Sudamericano de Adiestradores Caninos - Complejo Costa Salguero: Hace crecer tu red 
+                de contactos, charlas, sorteos y talleres temáticos.
+              </p>  
+            </li>
+            <li>
+              <p>
+                <b>19/10</b> - Seminario especial “Alimentación sana para una mente fuerte” - Instituto IACan: A cargo del 
+                Dr. Adrián Ladrimovich, especialista en nutrición animal, best seller del libro “No te comas la tarea”.
+              </p>  
+            </li>
+            <li>
+              <p>
+                <b>8/11</b> - Charla “Paren el fuego”: Concientización de los peligros de la pirotecnia y cómo atender 
+                emergencias causadas por ella. Dictada por la Asociación Argentina de Protección Animal de Córdoba.
+              </p>  
+            </li>
+            <li>
+              <p>
+                <b>25/11</b> - Charla “Ellos también sienten”: Tips para irse tranquilos y sin culpas de vacaciones. A cargo 
+                de nuestro director Kike Arroyo.
+              </p>  
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="container">  
+        <ul class="slider">
+          <li id="slide1">
+            <h3>Jorgelina Doberminsky</h3>
+            <p>
+              Estoy muy agradecida con IACan por todo lo aprendido. Se nota su calidez y amor por los perros en cada una de sus clases.
+            </p>
+            
+          </li>
+          <li id="slide2">
+            <h3>Germán Ovejeiro</h3>
+            <p>
+              Es el segundo curso que hago en este lugar, todos los instructores son excelentes y estan en todos los detalles. 
+              Los recomiendo.
+            </p>
+          </li>
+          <li id="slide3">  
+            <h3>Ana Maria Maltes</h3>
+            <p>
+              Tengo 20 años en esta profesión pero quise formalizar mis estudios para darle más valor a mi marca personal. 
+              Definitivamente hice la mejor elección viniendo a IACan
+            </p>
+          </li>
+          <li id="slide4">
+            <h3>Pastor Belgman</h3>
+            <p>
+              IACan me ha permitido poder responder a las exigencias actuales de mis clientes y poder brindarles lo mejor a nuestros 
+              mejores amigos cuadrúpedos.
+            </p>
+          </li>
+          <li id="slide5">
+            <h3>Laura Beagle</h3>
+            <p>
+              Formar un can como acompañante es una gran responsabilidad. El instituto no solo me ha permitido dedicarme a esta 
+              hermosa profesión de manera responsable, sino que tambien crea el sentimiento de compromiso con su compañero humano 
+              en cada uno de los perros con los que se trabaja. Gracias IACan!
+            </p>
+          </li>
+        </ul>    
+        <ul class="menu">
+          <li><a href="#slide1">1</a></li>
+          <li><a href="#slide2">2</a></li>
+          <li><a href="#slide3">3</a></li>
+          <li><a href="#slide4">4</a></li>
+          <li><a href="#slide5">5</a></li>
+        </ul>
+      </div>  
     </main>
     <footer>
       <div class="datos">
@@ -115,7 +196,7 @@
         <a href="contacto.html" target="_blank">Contacto</a>
       </div>
       <div class="redes">
-        <h4>Nuestras Redes Sociales</h4>
+        <h5>Nuestras Redes Sociales</h5>
         <a href="#"><img src="img/whatsapp.png" alt="whatsapp"></a>
         <a href="#"><img src="img/facebook.png" alt="facebook"></a>
         <a href="#"><img src="img/instagram.png" alt="instagram"></a>
