--- a/pages/inscripciones.html
+++ b/pages/inscripciones.html
@@ -27,15 +27,31 @@
       <section>
         <div class="texto">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid illum
-            ipsa odio deleniti quos maxime sapiente beatae hic. Omnis blanditiis
-            quasi exercitationem repudiandae error veritatis tempore eum? Harum,
-            sapiente accusamus.
+            En IACan contamos con un completo curso de educación y adiestramiento canino profesional y certificado
+             por los mejores especialistas y educadores del país.
+          </p>
+          <p> 
+            Aprenderás acerca de la dirección, educación, adiestramiento y manejo de los canes y las técnicas fundamentales 
+            para enseñarles a comportarse de manera adaptativa frente a la sociedad. También tendrás la oportunidad de adiestrar 
+            canes para búsqueda y rescate en situaciones extremas.
           </p>
         </div>
         <div class="video">
-          <video src="../videos/presentacion.mp4" alt="video1" width="700px" autoplay>
+          <video src="../videos/presentacion.mp4" alt="video" width="700px" autoplay="true">
         </div>
+        <div class="texto">
+          <p>
+            Este curso está dirigido a los profesionales del mundo de la seguridad y medio ambiente, concretamente a 
+            adiestramiento de base y educación canica, dentro del área profesional seguridad y prevención, y a todas aquellas 
+            personas interesadas en adquirir conocimientos relacionados con el adiestramiento del perro sus técnicas de 
+            aprendizaje y modificación de conductas no deseadas.
+          </p>
+          <p>
+            El objetivo de la formación es que salgan capacitados para reconocer cualquier problema de conducta y poder 
+            modificarlo, pudiendo trabajar de manera online o presencial según se adapte al caso.
+          </p>
+        </div>
+        
       </section>
       <section>
         <h2>Nuestros Entrenadores</h2>
@@ -62,7 +78,8 @@
               <div class="dorso">
                 <h4>César Morales:</h4>
                 <p>
-                  Experto en método de adiestramiento canino cognitivo-emocional. Entrenador de canes de la policía por más
+                  Experto en el método de adiestramiento canino cognitivo-emocional.
+                  Es entrenador de canes de la policía por más
                   de 12 años.
                 </p>
               </div>    
@@ -128,7 +145,7 @@
       <section>
         <div class="grupo">
           <div class="boton">
-            <a href="form-inscripcion.html">Inscribite</a>
+            <a href="form-alumno.html" target="_blank">Inscribite</a>
           </div>
           <div class="boton">
             <a href="../archivos/adiestramiento_canino.pdf" download>Plan de Estudios</a>
