--- a/pages/adiestradores.html
+++ b/pages/adiestradores.html
@@ -24,7 +24,20 @@
     </nav>
   </header>
   <main>
-  
+    <p>
+      Acá van los filtros
+    </p>
+    <div id="adiestradores">
+      <div class="linea">
+        <h5></h5>
+        <ul>
+          <li>
+            
+          </li>
+        </ul>
+      </div>
+
+    </div>
   </main>
   <footer>
     <div class="datos">
