Responsive formularios de alumno y adiestradores

--- a/pages/form-adiestrador.html
+++ b/pages/form-adiestrador.html
@@ -43,7 +43,7 @@
     </div> 
     <br>
     <div class="dato2">
-        <label for="birthday_a">Fecha de Nacimiento</label>
+        <label for="birthday_a">Fecha de Nacimiento:</label>
         <input type="date" name="birthday_a" required>
     </div> 
     <br>
