--- a/pages/form-alumno.html
+++ b/pages/form-alumno.html
@@ -41,7 +41,7 @@
     </div> 
     <br>
     <div class="dato_u">
-        <label for="birthday_u">Fecha de Nacimiento</label>
+        <label for="birthday_u">Fecha de Nacimiento:</label>
         <input type="date" name="birthday_u" required>
     </div> 
     <br>
